# qwen_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: attention.rs  config.rs  data.rs  feedforward.rs  inference.rs  main.rs  model.rs  rmsnorm.rs  rope.rs  tensor_utils.rs  train.rs  transformer_block.rs
