[package]
name = "qwen_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
rand = "0.8"
tokenizers = "0.20"
anyhow = "1.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]